<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_add_bankruptcies"
            android:icon="@drawable/baseline_add_24"
            android:title="@string/menu_add_bankruptcies" />
        <item
            android:id="@+id/nav_random_number"
            android:icon="@drawable/baseline_numbers_24"
            android:title="@string/menu_random_number" />
        <item
            android:id="@+id/nav_menu_ip_address"
            android:icon="@drawable/baseline_network_wifi_1_bar_24"
            android:title="@string/menu_ip_address" />
        <item
            android:id="@+id/nav_menu_convert_base"
            android:icon="@drawable/baseline_format_list_numbered_24"
            android:title="@string/menu_convert_base" />
    </group>
</menu>