<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="alvarez.pa1.org.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_add_bankruptcies"
        android:name="alvarez.pa1.org.ui.simplebankruptcies.SimpleBankruptciesFragment"
        android:label="@string/menu_add_bankruptcies"
        tools:layout="@layout/fragment_simplebankruptcies" />

    <fragment
        android:id="@+id/nav_random_number"
        android:name="alvarez.pa1.org.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_random_number"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_menu_ip_address"
        android:name="alvarez.pa1.org.ui.ipaddress.IpAddressFragment"
        android:label="@string/menu_ip_address"
        tools:layout="@layout/fragment_ipaddress" />

    <fragment
        android:id="@+id/nav_menu_convert_base"
        android:name="alvarez.pa1.org.ui.convertbase.ConvertBaseFragment"
        android:label="@string/menu_convert_base"
        tools:layout="@layout/fragment_convertbase" />
</navigation>